# Lyra_Tiger

./: .env.example  .gitignore  Prompts.md  README.md  WHATS_CHANGED.md  WHATS_CHANGED_V2.md  lyra_prd_v2.md  lyra_prd_v3.md  lyra_prd_v4.md  perplexity.md  prd_document.md  pyproject.toml  run.py
docs/: architecture.md  phase_1_setup.md  phase_2_ui_shell.md  phase_3_groq_voice.md  phase_4_langgraph_orchestration.md  phase_5_skills_browser.md  phase_6_skills_vision_dev.md  phase_7_safety_and_integration.md  prd_docs.md  prd_docs2.md
frontend/: package-lock.json  package.json
frontend/public/: pcm-recorder.js
frontend/src/: App.tsx  index.css
frontend/src/components/: CommandPalette.tsx  HistoryDrawer.tsx  OrbVisualizer.tsx  ResultCard.tsx  SettingsPanel.tsx  Transcript.tsx  primitives.tsx
frontend/src/hooks/: useCommandStream.ts  useConnectionHealth.ts  useSpeechPlayer.ts  useVoiceCapture.ts  useWindowResizer.ts
frontend/src/store/: useAppStore.ts  useSettingsStore.ts
src/: agent_state.py  audio.py  cache.py  config.py  gui.py  hotkey.py  llm.py  main.py  memory.py  orchestrator.py  resilience.py  routing.py  schemas.py  tts.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/nodes/: browser.py  classifier.py  developer.py  formatter.py  vision.py
src/skills/: developer.py  registry.py  vision.py  webbridge.py
src/skills/browser/: __init__.py  engine.py  extractor.py  playwright_adapter.py  policy.py
ui/: app.js  index.html  style.css
