[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pynput>=1.8.2",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "pywebview>=6.2.1",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "sounddevice>=0.5.5",
    "uvicorn>=0.49.0",
]
