[project]
name = "ai-assistant"
version = "0.1.0"
description = "Lyra Tiger — local-first macOS menu-bar AI assistant backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.0",
    "kokoro-onnx>=0.5.0",
    "langgraph>=1.2.6",
    "mss>=10.2.0",
    "numpy>=2.0.0",
    "playwright>=1.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.18.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "structlog>=24.4.0",
    "uvicorn>=0.49.0",
]
